--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: c
-sudo: true
+
+addons:
+    apt:
+        packages:
+            - cabal-install
+            - ghc
 
 install:
-    - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted universe"
-    - sudo apt-get update
-    - sudo apt-get install -t trusty-backports shellcheck
+    - cabal update
+    - cabal install shellcheck
+
+before_script:
+    - ~/.cabal/bin/shellcheck -V
 
 script:
-    - shellcheck -s sh */*/*.sh
+    - ~/.cabal/bin/shellcheck -s sh polybar-scripts/*/*.sh
