--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_script:
     - shellcheck --version
 
 script:
-    - shellcheck polybar-scripts/*/*.sh
+    - source ${TRAVIS_BUILD_DIR}/build.sh
