travis: Upgrade to xenial
Xenial has the latest shellcheck already installed, so no need to
download it ourselves, see
https://docs.travis-ci.com/user/reference/xenial/#compilers-and-build-toolchain

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: generic
 
-install:
-  - scversion="stable"
-  - wget "https://storage.googleapis.com/shellcheck/shellcheck-$scversion.linux.x86_64.tar.xz"
-  - tar --xz -xvf "shellcheck-$scversion.linux.x86_64.tar.xz"
-  - shellcheck() { "shellcheck-$scversion/shellcheck" "$@"; }
+dist: xenial
 
 before_script:
     - shellcheck --version
