travis: made irc notification a one liner

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ notifications:
     channels:
       - "irc.freenode.org#polybar"
     template:
-      - "%{author} pushed #%{commit} \"%{commit_subject}\" to %{repository_name}/%{branch}"
-      - "Build #%{build_number} %{result} / %{build_url} (diff: %{compare_url})"
+      - " %{repository_name}/%{branch} | \"%{commit_subject}\" by %{author} | Commit #%{commit} + Build #%{build_number} = %{result}"
     use_notice: true
     on_success: always
     on_failure: never
