fix: some grammatical errors

--- a/polybar-scripts/bspwm-node-flags/bspwm-node-flags.ini
+++ b/polybar-scripts/bspwm-node-flags/bspwm-node-flags.ini
@@ -1,6 +1,5 @@
-[module/winflags]
-exec = $HOME/.config/polybar/scripts/winflags
-format-foreground = ${colours.warning}
-label = %{T3}%output%%{T-}
+[module/bspwm-node-flags]
+exec = $HOME/.config/polybar/scripts/bspwm-node-flags
+format-foreground = '#fabd2f'
 tail = true
 type = custom/script
