--- a/polybar-scripts/dunst-controller/dunstctl.ini
+++ b/polybar-scripts/dunst-controller/dunstctl.ini
@@ -2,6 +2,7 @@
 click-left = dunstctl history-pop
 click-middle = $HOME/.config/polybar/scripts/dunstctl toggle
 click-right = dunstctl close-all
+double-click-left = $HOME/.config/polybar/scripts/dunstctl show-all
 exec = $HOME/.config/polybar/scripts/dunstctl
 interval = 1.6
 type = custom/script
